# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "db-nexus"
version = "0.1.0"
authors = [
  { name="Max Lemes", email="maxvlemes@gmail.com" },
]
description = "Uma biblioteca core para gerenciamento de sessão e repositórios com SQLAlchemy."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/maxlemes/db-nexus"
Issues = "https://github.com/maxlemes/db-nexus/issues"